--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -21,3 +21,43 @@
 - spring-aop：Spring AOP处理，如动态代理，AOP字节码提升；
 - spring-context：事件驱动、注解驱动，模块驱动等；
 - spring-expression：Spring表达式语言模块。
+
+### 2.重新认识IOC
+
+#### 1.1 IOC容器的职责
+
+- 依赖处理
+
+  - 依赖查找
+  - 依赖注入
+
+- 生命周期管理
+
+  - 容器
+  - 托管的资源(Java Beans或其他资源)
+
+- 配置
+
+  - 容器
+  - 外部化配置
+  - 托管的资源(Java Beans或其他资源)
+
+#### 1.2 依赖查找VS依赖注入
+
+| 类型     | 依赖处理 | 实现便利性 | 代码侵入性   | API依赖性     | 可读性 |
+| -------- | -------- | ---------- | ------------ | ------------- | ------ |
+| 依赖查找 | 主动获取 | 相对繁琐   | 侵入业务逻辑 | 依赖容器API   | 良好   |
+| 依赖注入 | 被动提供 | 相对便利   | 低侵入性     | 不依赖容器API | 一般   |
+
+#### 1.3 面试题：什么是IOC？
+
+IOC是反转控制，类似于好莱坞原则，容器创建对象，将它们装配在一起，配置它们并管理它们的完整的生命周期，主要有依赖查找和依赖注入实现。
+
+#### 1.4 面试题：依赖查找和依赖注入的区别？
+
+依赖查找是主动或手动的依赖查找方式，通常需要依赖容器或标准API实现；而依赖注入则是手动或自动依赖绑定的方式，无需依赖特定的容器和API。
+
+#### 1.5  面试题：Spring作为IOC容器有什么优势？
+
+典型的IOC管理：依赖查找和依赖注入；AOP抽象；事务抽象；事件机制；SPI扩展；强大的第三方整合；易测试性；更好的面向对象。
+
