build(IOC): 依赖注入-自动配置Autowire

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -24,7 +24,7 @@
 
 ### 2.重新认识IOC
 
-#### 1.1 IOC容器的职责
+#### 2.1 IOC容器的职责
 
 - 依赖处理
 
@@ -42,22 +42,49 @@
   - 外部化配置
   - 托管的资源(Java Beans或其他资源)
 
-#### 1.2 依赖查找VS依赖注入
+#### 2.2 依赖查找VS依赖注入
 
 | 类型     | 依赖处理 | 实现便利性 | 代码侵入性   | API依赖性     | 可读性 |
 | -------- | -------- | ---------- | ------------ | ------------- | ------ |
 | 依赖查找 | 主动获取 | 相对繁琐   | 侵入业务逻辑 | 依赖容器API   | 良好   |
 | 依赖注入 | 被动提供 | 相对便利   | 低侵入性     | 不依赖容器API | 一般   |
 
-#### 1.3 面试题：什么是IOC？
+#### 2.3 面试题：什么是IOC？
 
 IOC是反转控制，类似于好莱坞原则，容器创建对象，将它们装配在一起，配置它们并管理它们的完整的生命周期，主要有依赖查找和依赖注入实现。
 
-#### 1.4 面试题：依赖查找和依赖注入的区别？
+#### 2.4 面试题：依赖查找和依赖注入的区别？
 
 依赖查找是主动或手动的依赖查找方式，通常需要依赖容器或标准API实现；而依赖注入则是手动或自动依赖绑定的方式，无需依赖特定的容器和API。
 
-#### 1.5  面试题：Spring作为IOC容器有什么优势？
+#### 2.5  面试题：Spring作为IOC容器有什么优势？
 
 典型的IOC管理：依赖查找和依赖注入；AOP抽象；事务抽象；事件机制；SPI扩展；强大的第三方整合；易测试性；更好的面向对象。
+
+### 3.IOC容器概述
+
+#### 3.1 Spring IOC依赖查找
+
+- 根据Bean名称查找
+  - 实时查找
+  - 延迟查找
+- 根据Bean类型查找
+  - 单个Bean对象
+  - 集合Bean对象
+- 根据Bean名称+类型查找
+- 根据Java注解查找
+  - 单个Bean对象
+  - 集合Bean对象
+
+#### 3.2 Spring IOC依赖注入
+
+- 根据Bean名称注入
+- 根据Bean类型注入
+  - 单个Bean对象
+  - 集合Bean对象
+- 注入容器内建Bean对象
+- 注入非Bean对象
+- 注入类型
+  - 实时注入
+  - 延迟注入
 
