--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -130,5 +130,32 @@ BeanFactory是IoC底层容器；FactoryBean是创建Bean的一种方式，帮助
 
 IoC配置元信息读取和解析(XML、Bean的注解)、IoC容器生命周期、Spring事件发布、国际化等。
 
+### 4.Spring Bean基础
 
+#### 4.1 定义Spring Bean
 
+- 什么是BeanDefinition?
+
+  BeanDefinition是SpringFramework中定义Bean的配置元信息接口，包括：
+
+  - Bean的类名
+
+  - Bean行为配置元素，如作用域、自动绑定的模式，生命周期回调等
+  - 其他Bean引用，又可称作合作者或者依赖
+  - 配置设置，比如Bean属性(Properties)
+
+- BeanDefinition元信息
+
+  | 属性(Property)           | 说明                                         |
+  | ------------------------ | -------------------------------------------- |
+  | Class                    | Bean全类名，必须是具体类，不能用抽象类或接口 |
+  | Name                     | Bean的名称或者ID                             |
+  | Scope                    | Bean的作用域(如：singleton、prototype)       |
+  | Constructor arguments    | Bean构造器参数(用于依赖注入)                 |
+  | Properties               | Bean属性设置(用于依赖注入)                   |
+  | Autowiring mode          | Bean自动绑定模式(如：通过名称byName)         |
+  | Lazy initialization mode | Bean延迟初始化模式(延迟和非延迟)             |
+  | Initialization method    | Bean初始化回调方法名称                       |
+  | Destruction method       | Bean销毁回调方法名称                         |
+
+  
