--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -307,6 +307,17 @@ ListableBeanFactory
 
     - Spring 3.0 获取指定名称+标注类型Bean实例：findAnnotationOnBean(String beanName, Class<A> annotationType)
 
+#### 5.3 层次性依赖查找
+
+- HierarchicalBeanFactory
+  - 双亲BeanFactory：getParentBeanFactory()
+  - 层次性查找
+    - 根据Bean名称查找：基于containsLocalBean方法实现
+    - 根据Bean类型查找实例列表：
+      1. 单一类型：BeanFactoryUtils#beanOfType
+      2. 集合类型：BeanFactoryUtils#beansOfTypeIncludingAncestors
+    - 根据Java注解查找名称列表：BeanFactoryUtils#beanNamesForTypeIncludingAncestors
+
 
 
 ​      
