feat(延迟依赖查找): ObjectProvider

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -318,6 +318,18 @@ ListableBeanFactory
       2. 集合类型：BeanFactoryUtils#beansOfTypeIncludingAncestors
     - 根据Java注解查找名称列表：BeanFactoryUtils#beanNamesForTypeIncludingAncestors
 
+#### 5.4 Bean延迟依赖查找
+
+- ObjectFactory
+- ObjectProvider
+  - Spring 5对Java 8特性扩展
+    - 函数式接口
+      - getIfAvailable(Supplier)
+      - ifAvailable(Consumer)
+    - Stream扩展-stream()
+
+
+
 
 
 ​      
