--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -328,9 +328,19 @@ ListableBeanFactory
       - ifAvailable(Consumer)
     - Stream扩展-stream()
 
+#### 5.5 安全依赖查找
 
+| 依赖查找类型 | 代表实现                           | 是否安全 |
+| ------------ | ---------------------------------- | -------- |
+| 单一类型查找 | BeanFactory#getBean                | 否       |
+|              | ObjectFactory#getObject            | 否       |
+|              | ObjectProvider#getIfAvailable      | 是       |
+|              |                                    |          |
+| 集合类型查找 | ListableBeanFactory#getBeansOfType | 是       |
+|              | ObjectProvider#stream              | 是       |
 
-
-
-​      
-
+> 层次性依赖查找的安全性取决于其扩展的单一或集合类型的BeanFactory接口
+>
+> 1. HierarchicalBeanFactory extends `BeanFactory`    不安全
+> 2.  ConfigurableListableBeanFactory
+>          extends `ListableBeanFactory`, AutowireCapableBeanFactory, ConfigurableBeanFactory    安全
