--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -344,3 +344,30 @@ ListableBeanFactory
 > 1. HierarchicalBeanFactory extends `BeanFactory`    不安全
 > 2.  ConfigurableListableBeanFactory
 >          extends `ListableBeanFactory`, AutowireCapableBeanFactory, ConfigurableBeanFactory    安全
+
+#### 5.6 内建可查找的依赖
+
+- AbstractApplicationContext 内建可查找的依赖
+
+  | Bean名称                    | Bean实例                        | 使用场景               |
+  | --------------------------- | ------------------------------- | ---------------------- |
+  | environment                 | Environment对象                 | 外部化配置以及Profiles |
+  | systemProperties            | java.util.Properties对象        | Java系统属性           |
+  | systemEnvironment           | java.util.Map对象               | 操作系统环境变量       |
+  | messageSource               | MessageSource对象               | 国际化文案             |
+  | lifecycleProcessor          | LifecycleProcessor对象          | Lifecycle Bean处理器   |
+  | applicationEventMulticaster | ApplicationEventMulticaster对象 | Spring事件广播器       |
+
+- 注解驱动Spring应用上下文内建可查找的依赖
+
+  | Bean名称                                                     | Bean实例                                                     | 使用场景                                            |
+  | ------------------------------------------------------------ | ------------------------------------------------------------ | --------------------------------------------------- |
+  | org.springframework.context.annotation.internalConfigurationAnnotationProcessor | ConfigurationClassPostProcessor对象(Bean的后置处理，BeanFactory生命周期) | 处理Spring配置类                                    |
+  | org.springframework.context.annotation.internalAutowiredAnnotationProcessor | AutowiredAnnotationBeanPostProcessor对象(Bean的后置处理，Bean生命周期) | 处理@Autowired以及@Value注解                        |
+  | org.springframework.context.annotation.internalCommonAnnotationProcessor | CommonAnnotationBeanPostProcessor对象(Bean的后置处理，需要条件激活) | (条件激活)处理JSR-250注解，如@PostConstruct等       |
+  | org.springframework.context.event.internalEventListenerProcessor | EventListenerMethodProcessor对象                             | 处理标注@EventListener的Spring事件监听方法          |
+  | org.springframework.context.event.internalEventListenerFactory | DefaultEventListenerFactory对象                              | @EventListener事件监听方法适配为ApplicationListener |
+  | org.springframework.context.annotation.internalPersistenceAnnotationProcessor | PersistenceAnnotationBeanPostProcessor对象(Bean的后置处理，需要条件激活) | (条件激活)处理JPA注解场景                           |
+
+  
+
