--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -369,5 +369,17 @@ ListableBeanFactory
   | org.springframework.context.event.internalEventListenerFactory | DefaultEventListenerFactory对象                              | @EventListener事件监听方法适配为ApplicationListener |
   | org.springframework.context.annotation.internalPersistenceAnnotationProcessor | PersistenceAnnotationBeanPostProcessor对象(Bean的后置处理，需要条件激活) | (条件激活)处理JPA注解场景                           |
 
-  
 
+#### 5.7 依赖查找中的经典异常
+
+- BeansException子类型
+
+  | 异常类型                        | 触发条件(举例)                            | 场景举例                                    |
+  | ------------------------------- | ----------------------------------------- | ------------------------------------------- |
+  | NoSuchBeanDefinitionException   | 当查找Bean不存在IoC容器时                 | BeanFactory#getBean ObjectFactory#getObject |
+  | NoUniqueBeanDefinitionException | 类型依赖查找的时，IoC容器存在多个Bean实例 | BeanFectory#getBean(Class)                  |
+  | BeanInstantiationException      | 当Bean所对应的类型非具体类时              | BeanFactory#getBean                         |
+  | BeanCreationException           | 当Bean初始化过程中                        | Bean初始化方法执行异常时                    |
+  | BeanDefinitionStoreException    | 当BeanDefinition配置元信息非法时          | XML配置资源无法打开时                       |
+
+  
