feat(依赖注入): 依赖注入的模式和类型

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -382,4 +382,46 @@ ListableBeanFactory
   | BeanCreationException           | 当Bean初始化过程中                        | Bean初始化方法执行异常时                    |
   | BeanDefinitionStoreException    | 当BeanDefinition配置元信息非法时          | XML配置资源无法打开时                       |
 
-  
+
+#### 5.8 面试题：ObjectFactory与BeanFactory的区别？
+
+ObjectFactory与BeanFactory均提供依赖查找的能力。不过ObjectFactory仅关注一个或一种类型的Bean依赖查找，并且自身不具备依赖查找的能力，能力则由BeanFactory输出。
+
+BeanFactory则提供了单一类型、集合类型以及层次性等多种依赖查找方式。
+
+#### 5.9 面试题：BeanFactory#getBean操作是否线程安全？
+
+BeanFactory#getBean方法的执行是线程安全的，操作过程中会增加互斥锁。
+
+#### 5.10 面试题：Spring依赖查找与注入在来源上的区别？
+
+### 6.Spring IoC注入
+
+#### 6.1 依赖注入的模式和类型
+
+**依赖注入模式**
+
+- 手动模型-配置或编程的方式，提前安排注入规则
+
+  - XML资源配置元信息
+  - Java注解配置元信息
+  - API配置元信息
+
+- 自动模式-实现方提供依赖自动关联的方式，按照内建的注入规则
+
+  - Autowiring(自动绑定)
+
+**依赖注入类型**
+
+| 依赖注入类型 | 配置元数据举例                                  |
+| ------------ | ----------------------------------------------- |
+| Setter方法   | < property name="user" ref="userBean"/ >        |
+| 构造器       | < constructor-arg name="user" ref="userBean" /> |
+| 字段         | @Autowired User user;                           |
+| 方法         | @Autowired public void user(User user){...}     |
+| 接口回调     | class MyBean implements BeanFactoryAware{...}   |
+
+
+
+
+
