feat(Spring Bean作用域): Request Bean作用域

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -706,3 +706,11 @@ Spring BeanDefinition；单例对象；Resolvable Dependency(ConfigurationListab
 ![prototype-bean作用域](img/prototype-bean作用域.png)
 
 - 注意：Spring容器无法管理prototype Bean的完整生命周期，也无法记录实例的存在。销毁回调方法将不会执行，可以利用BeanPostProcessor进行清扫工作。
+
+### 8.3 "request"Bean作用域
+
+- 配置
+  - XML：< bean class="..." scope="request" />
+  - Java注解：@RequestScope或@Scope(WebApplicationContext.SCOPE_REQUEST)
+- 实现
+  - API：RequestScope
