--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -697,20 +697,37 @@ Spring BeanDefinition；单例对象；Resolvable Dependency(ConfigurationListab
   | session     | 将Spring Bean存储在HttpSession中                             |
   | application | 将Spring Bean存储在ServletContext中                          |
 
-#### 8.1 "singleton"Bean作用域
+#### 8.1 "singleton" Bean作用域
 
 ![singleton-bean作用域](img/singleton-bean作用域.png)
 
-### 8.2 "prototype"Bean作用域
+### 8.2 "prototype" Bean作用域
 
 ![prototype-bean作用域](img/prototype-bean作用域.png)
 
 - 注意：Spring容器无法管理prototype Bean的完整生命周期，也无法记录实例的存在。销毁回调方法将不会执行，可以利用BeanPostProcessor进行清扫工作。
 
-### 8.3 "request"Bean作用域
+### 8.3 "request" Bean作用域
 
 - 配置
   - XML：< bean class="..." scope="request" />
   - Java注解：@RequestScope或@Scope(WebApplicationContext.SCOPE_REQUEST)
 - 实现
   - API：RequestScope
+
+### 8.4 "session" Bean作用域
+
+- 配置
+  - XML：< bean class="..." scope="session" />
+  - Java注解：@SessionScope或@Scope(WebApplicationContext.SCOPE_SESSION)
+- 实现
+  - API：SessionScope
+
+### 8.5 "application" Bean作用域
+
+- 配置
+  - XML：< bean class="..." scope="application" />
+  - Java注解：@AppliactionScope或@Scope(WebApplicationContext.SCOPE_APPLICATION)
+- 实现
+  - API：ServletContextScope
+
