feat(Spring Bean作用域): 自定义ThreadLocal级别Bean作用域

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -731,3 +731,28 @@ Spring BeanDefinition；单例对象；Resolvable Dependency(ConfigurationListab
 - 实现
   - API：ServletContextScope
 
+### 8.6 自定义Bean作用域
+
+1. 实现Scope
+
+   org.springframework.beans.factory.config.Scope
+
+2. 注册Scope
+
+   - org.springframework.beans.factory.config.ConfigurableBeanFactory#registerScope
+
+   - 配置
+
+     ```xml
+     	<bean class="org.springframework.beans.factory.config.CustomScopeConfigurer">
+             <property name="scopes">
+                 <map>
+                     <entry key="...">
+                         
+                     </entry>
+                 </map>
+             </property>
+         </bean>
+     ```
+
+     
