feat(Spring Bean生命周期): Spring Bean 元信息配置(Properties资源配置)

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -755,4 +755,27 @@ Spring BeanDefinition；单例对象；Resolvable Dependency(ConfigurationListab
          </bean>
      ```
 
-     
+
+### 8.7 面试题：Spring内建的Bean作用域有几种？
+
+singleton、prototype、request、session、application以及webSocket。
+
+### 8.8 面试题：singleton Bean是否在一个应用是唯一的？
+
+否，singleton bean仅在当前Spring IoC容器(BeanFactory)中是单例对象。
+
+### 8.9 面试题：application Bean是否可以被其它方案代替？
+
+可以，实际上application Bean与singleton Bean没有本质区别。
+
+## 9.Spring Bean生命周期
+
+### 9.1 Spring Bean元信息配置阶段
+
+BeanDefinition配置
+
+- 面向资源
+  - XML配置
+  - Properties资源配置
+- 面向注解
+- 面向API
