feat(Spring Bean生命周期):面向注解BeanDefinition解析

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -770,7 +770,7 @@ singleton、prototype、request、session、application以及webSocket。
 
 ## 9.Spring Bean生命周期
 
-### 9.1 Spring Bean元信息配置阶段
+### 9.1 Spring Bean元信息
 
 BeanDefinition配置
 
@@ -779,3 +779,11 @@ BeanDefinition配置
   - Properties资源配置
 - 面向注解
 - 面向API
+
+BeanDefinition解析
+
+- 面向资源BeanDefinition解析
+  - BeanDefinitionReader
+  - XML解析器 - BeanDefinitionParser
+- 面向注解BeanDefinition解析
+  - AnnotatedBeanDefinitionReader
