feat(Spring Bean生命周期):Spring Bean Definition注册、合并阶段

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -770,7 +770,7 @@ singleton、prototype、request、session、application以及webSocket。
 
 ## 9.Spring Bean生命周期
 
-### 9.1 Spring Bean元信息
+### 9.1 Spring Bean元信息配置阶段
 
 BeanDefinition配置
 
@@ -780,6 +780,8 @@ BeanDefinition配置
 - 面向注解
 - 面向API
 
+### 9.2 Spring Bean元信息解析阶段
+
 BeanDefinition解析
 
 - 面向资源BeanDefinition解析
@@ -787,3 +789,17 @@ BeanDefinition解析
   - XML解析器 - BeanDefinitionParser
 - 面向注解BeanDefinition解析
   - AnnotatedBeanDefinitionReader
+
+### 9.3 Spring Bean注册阶段
+
+BeanDefinitionRegistry注册接口
+
+- BeanDefinitionRegistry
+
+### 9.4 Spring BeanDefinition合并阶段
+
+BeanDefinition合并
+
+- 父子BeanDefinition合并
+  - 当前BeanFactory查找
+  - 层次性BeanFactory查找
