feat(Spring Bean生命周期):Spring Bean加载、实例化前阶段

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -803,3 +803,18 @@ BeanDefinition合并
 - 父子BeanDefinition合并
   - 当前BeanFactory查找
   - 层次性BeanFactory查找
+
+### 9.5 Spring Bean Class加载阶段
+
+- ClassLoader类加载
+- Java Security安全控制
+- ConfigurableBeanFactory临时ClassLoader
+
+### 9.6 Spring Bean实例化阶段
+
+非主流生命周期 - 实例化前阶段：
+
+- InstantiationAwareBeanPostProcessor#postProcessBeforeInstantiation
+
+
+
