feat(Spring Bean生命周期):Spring Bean实例化、实例化后阶段

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -812,9 +812,19 @@ BeanDefinition合并
 
 ### 9.6 Spring Bean实例化阶段
 
-非主流生命周期 - 实例化前阶段：
+**非主流生命周期 - 实例化前阶段：**
 
 - InstantiationAwareBeanPostProcessor#postProcessBeforeInstantiation
+
+**实例化阶段：**
+
+- 传统实例化方式：InstantiationStrategy
+- 构造器依赖注入
+
+**实例化后阶段：**
+
+- Bean属性赋值(Populate)判断
+  - InsantiationAwareBeanPostProcessor#postProcessAfterInstantiantion
 
 
 
