feat(Spring Bean生命周期):Spring Bean属性赋值前阶段

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -826,5 +826,16 @@ BeanDefinition合并
 - Bean属性赋值(Populate)判断
   - InsantiationAwareBeanPostProcessor#postProcessAfterInstantiantion
 
+### 9.7 Spring Bean属性赋值前阶段
+
+Bean属性值元信息
+
+- PropertyValues
+
+Bean属性赋值前回调
+
+- Spring 1.2-5.0：InstantiationAwareBeanPostProcessor#postProcessPropertyValues
+- Spring 5.1：InstantiationAwareBeanProcessProperties
+
 
 
