--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -837,5 +837,20 @@ Bean属性赋值前回调
 - Spring 1.2-5.0：InstantiationAwareBeanPostProcessor#postProcessPropertyValues
 - Spring 5.1：InstantiationAwareBeanProcessProperties
 
+9.8 Spring Bean Aware接口回调阶段
 
+Spring Aware接口
+
+- BeanNameAware
+- BeanClassLoaderAware
+- BeanFactoryAware
+
+在applicationContext下才会回调
+
+- EnvironmentAware
+- EmbeddedValueResolverAware
+- ResourceLoaderAware
+- ApplicationEventPublishAware
+- MessageSourceAware
+- ApplicationContextAware
 
