--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -854,3 +854,15 @@ Spring Aware接口
 - MessageSourceAware
 - ApplicationContextAware
 
+### 9.8 Spring Bean初始化前阶段
+
+已完成：
+
+- Bean实例化
+- Bean属性赋值
+- Bean Aware接口回调
+
+方法回调：
+
+- BeanPostProcessor#postProcessBeforeInitialization
+
