--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -835,9 +835,9 @@ Bean属性值元信息
 Bean属性赋值前回调
 
 - Spring 1.2-5.0：InstantiationAwareBeanPostProcessor#postProcessPropertyValues
-- Spring 5.1：InstantiationAwareBeanProcessProperties
+- Spring 5.1：InstantiationAwareBeanProcessProperties#postProcessProperties
 
-9.8 Spring Bean Aware接口回调阶段
+### 9.8 Spring Bean Aware接口回调阶段
 
 Spring Aware接口
 
@@ -854,7 +854,7 @@ Spring Aware接口
 - MessageSourceAware
 - ApplicationContextAware
 
-### 9.8 Spring Bean初始化前阶段
+### 9.9 Spring Bean初始化前阶段
 
 已完成：
 
@@ -865,4 +865,18 @@ Spring Aware接口
 方法回调：
 
 - BeanPostProcessor#postProcessBeforeInitialization
+
+### 9.10 Spring Bean初始化阶段
+
+Bean初始化(Initialization)
+
+- @PostConstruct标注方法
+- 实现InitializingBean接口的afterPropertiesSet()方法
+- 自定义初始化方法
+
+
+
+
+
+
 
