feat(Spring Bean生命周期): Spring Bean初始化后阶段

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -874,6 +874,14 @@ Bean初始化(Initialization)
 - 实现InitializingBean接口的afterPropertiesSet()方法
 - 自定义初始化方法
 
+### 9.11 Spring Bean初始化后阶段
+
+方法回调
+
+- BeanPostProcessor#postProcessAfterInitialization
+
+
+
 
 
 
