feat(Spring Bean生命周期): Spring Bean初始化完成阶段SmartInitializingSingleton#afterSingletonsInstantiated

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -880,6 +880,12 @@ Bean初始化(Initialization)
 
 - BeanPostProcessor#postProcessAfterInitialization
 
+### 9.12 Spring Bean初始化完成阶段
+
+方法回调
+
+- Spring 4.1+：SmartInitializingSingleton#afterSingletonsInstantiated
+
 
 
 
