feat(Spring Bean生命周期): Spring Bean销毁前 DestructionAwareBeanPostProcessor#postProcessBeforeDestruction

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -886,6 +886,14 @@ Bean初始化(Initialization)
 
 - Spring 4.1+：SmartInitializingSingleton#afterSingletonsInstantiated
 
+### 9.13 Spring Bean销毁前阶段
+
+方法回调
+
+- DestructionAwareBeanPostProcessor#postProsessBeforeDestruction
+
+
+
 
 
 
