feat(Spring Bean生命周期): Spring Bean销毁阶段：1.@PreDestroy 2.实现DisposableBean接口的destroy()方法 3.xml自定义销毁方法

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -892,6 +892,14 @@ Bean初始化(Initialization)
 
 - DestructionAwareBeanPostProcessor#postProsessBeforeDestruction
 
+### 9.14 Spring Bean销毁阶段
+
+Bean销毁(Destroy)
+
+- @PreDestroy标注方法
+- 实现DisposableBean接口的destroy()方法
+- 自定义销毁方法
+
 
 
 
