feat(Spring Bean生命周期):Spring Bean垃圾收集；BeanPostProcessor的使用场景；BeanFactoryPostProcessor与BeanPostProcessor的区别；BeanFactory怎么处理Bean生命周期

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -900,9 +900,42 @@ Bean销毁(Destroy)
 - 实现DisposableBean接口的destroy()方法
 - 自定义销毁方法
 
+### 9.15 Spring Bean垃圾收集
 
+Bean垃圾回收(GC)
 
+- 关闭Spring容器(应用上下文)
+- 执行GC
+- Spring Bean覆盖的finalize()方法被回调
 
+### 9.16 面试题：BeanPostProcessor的使用场景
+
+BeanPostProcessor提供Spring Bean初始化前和初始化后的生命周期回调，分别对应postProcessBeforeInitialization以及postProcessAfterInitialization方法，允许对关心的Bean进行扩展，甚至是替换。ApplicationContext相关的Aware回调也是基于BeanPostProcessor实现，即ApplicationContextAwareProcessor。
+
+### 9.17 面试题：BeanFactoryPostProcessor与BeanPostProcessor的区别
+
+BeanFactoryPostProcessor是Spring BeanFactory(实际为ConfigurableListableFactory)的后置处理器，用于扩展BeanFactory，或通过BeanFactory进行依赖查找和注入。BeanFactoryPostProcessor必须有Spring ApplicationContext执行，BeanFactory无法预期直接交互。
+
+而BeanPostProcessor则直接与BeanFactory关联，属于N对1的关系。
+
+### 9.18 面试题：BeanFactory是怎么处理Bean生命周期
+
+BeanFactory默认实现为DefaultListableBeanFactory，其中Bean生命周期与方法映射如下：
+
+- BeanDefinition 注册阶段 - registerBeanFactory
+- BeanDefinition 合并阶段 - getMergedBeanDefinition
+- Bean 实例化前阶段 - resolveBeforeInstantion
+- Bean 实例化阶段 - createBeanInstance
+- Bean 实例化后阶段 - populateBean
+- Bean 属性赋值前阶段 - populateBean
+- Bean 属性赋值阶段 - populateBean
+- Bean Aware接口回调阶段 - initializeBean
+- Bean 初始化前阶段 - initializeBean
+- Bean 初始化阶段 - initializeBean
+- Bean 初始化后阶段 - initializeBean
+- Bean  初始化完成阶段 - preInstantiateSingletons
+- Bean 销毁前阶段 - destoryBean
+- Bean 销毁阶段 - destoryBean
 
 
 
