feat(Spring Bean属性元信息):AttributeAccessor，BeanMetadataElement

--- a/doc/笔记.md
+++ b/doc/笔记.md
@@ -937,9 +937,28 @@ BeanFactory默认实现为DefaultListableBeanFactory，其中Bean生命周期与
 - Bean 销毁前阶段 - destoryBean
 - Bean 销毁阶段 - destoryBean
 
+## 10.Spring配置元信息
 
+### 10.1Spring配置元信息
 
+**配置元信息**
 
+- Spring Bean配置元信息 - BeanDefinition
+- Spring Bean属性元信息 - PropertyValues
+- Spring容器配置元信息
+- Spring外部化配置元信息 - PropertySource
+- Spring Profile元信息 - @Profile
 
+**Spring Bean配置元信息**
 
+- GenericBeanDefinition：通用性BeanDefiniton；
+- RootBeanDefinition：无parent的BeanDefinition或者合并后BeanDefinition；
+- AnnotatedBeanDefinition：注解标注的BeanBefinition
 
+**Spring Bean属性元信息**
+
+- Bean属性元信息 - PropertyValues
+  - 可修改实现 - MutablePropertyValues
+  - 元素成员 - PropertyValue
+- Bean属性上下文存储 - AttributeAccessor
+- Bean元信息元素 - BeanMetadataElement
